<resources>
    <string name="app_name">2.a.1.MyPlatDiary.BrandanJones</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="zero">0.0</string>
    <string name="plantName">Plant Name</string>
    <string name="description">Description</string>
    <string name="datePlanted">Date Planted</string>
    <string name="later">IMPLEMENT LATER</string>

<!--    THIS INSTRUCTION WAS WRONGLY PROVIDED BY DEVELOPER.FACEBOOK.COM-->
<!--    <string name="facebook_app_id">641492793072140</string>-->
<!--    <string name="fb_login_protocol_scheme">fb641492793072140</string>-->

    <string name="facebook_application_id" translatable="false">641492793072140</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb641492793072140</string>
    <string name="eventType">Event Type</string>
    <string name="_0">0</string>
    <string name="units">Units (Gallons,Cups, etc</string>
    <string name="date">Event Date</string>
    <string name="take_photo">Take Photo</string>
    <string name="save">Save</string>
    <string name="event_thumbnail">Event Thumbnail</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
</resources>
