<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/normal_map"
            android:title="@string/normal_map"
            app:showAsAction="ifRoom"
            />
        <item
            android:id="@+id/hybrid_map"
            android:title="@string/hybrid_map"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/satellite_map"
            android:title="@string/satellite_map"
            app:showAsAction="never" />
        <item
            android:id="@+id/terrain_map"
            android:title="@string/terrain_map"
            app:showAsAction="never" />
    </group>

</menu>